--- a/examples/tasks.yaml
+++ b/examples/tasks.yaml
@@ -20,3 +20,13 @@
 - command: node
   body: |
     console.log("Hello node!")
+---
+- type: bash
+  body: |
+    echo "first"
+- type: bash
+  body: |
+    exit 1
+- type: bash
+  body: |
+    echo "!! if you see me run !!"
