--- a/.triggir/tasks.yaml
+++ b/.triggir/tasks.yaml
@@ -4,6 +4,5 @@
     [[ "$REF" != "refs/heads/main" ]] && exit 0
 
     git remote add github git@github.com:fraburnham/taskir
-    git checkout main
-    git push github main
+    git push github "$CHECKOUT_SHA":refs/heads/main
     git push github --tags
